--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
     </ul>
 
     <h2>Contact</h2>
-    <p>Contact us via Discord: @Claus#XXXX or email: contact@example.com</p>
+    <p>Contact us via Discord: @m5remix or email: claus.valca67@gmail.com</p>
   </div>
 </body>
 </html>
