--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
     </ul>
 
     <h2>Contact</h2>
-    <p>Contact: @Claus#XXXX or legal@example.com</p>
+    <p>Contact: @m5remix or claus.valca67@gmail.com</p>
   </div>
 </body>
 </html>
